<resources>
    <string name="app_name">DermaBalance</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_data">No data</string>
    <string name="no_file">No file</string>
    <string name="products">productos</string>
    <string name="file_readed_no_changes">No changes detected</string>

    <string name="new_price">Nuevo precio:</string>
    <string name="last_price">Precio anterior:</string>
    <string name="difference">Diferencia:</string>

    <string name="search_fields">Nombre</string>

    <string name="title_activity_products_changed">Nuevos precios</string>
    <string name="add_file">Añadir archivos</string>
    <string name="delete_data">Eliminar datos</string>
    <string name="delete_data_confirmation">Quieres borrar los datos?</string>
    <string name="calculate">Calcular</string>
    <string name="no_product_found">Sin resultados</string>

    <string name="higher">Más altos</string>
    <string name="lower">Más bajos</string>
    <string name="finish">Listo! :D</string>

    <string name="base_price">Precio base</string>
    <string name="iva">Iva</string>
    <string name="utility">Utilidad</string>
    <string name="final_price">Precio final</string>
    <string name="all_cleared">Listo!</string>

    <string name="yes">Sí</string>
    <string name="no">No</string>
</resources>
