<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView_calculated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:maxEms="8" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_price"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/editText_base"
            android:layout_width="@dimen/edittext_size"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:inputType="numberDecimal"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iva"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/iva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utility"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/editText_utility"
            android:layout_width="@dimen/edittext_size"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:inputType="numberDecimal" />

    </RelativeLayout>

</LinearLayout>